[package]
name = "bonk-plugin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_bonk_plugin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []



[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "idl-build", ] }
anchor-spl = "=0.30.1"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
spl-governance-tools = "0.1.4"
solana-program = "^2.1.13"
gpl-shared = { path = "../shared", features = ["no-entrypoint"] }
spl-token = { version = "^5.0.1", features = ["no-entrypoint"] }
solana-sdk = "1.18.26"
zeroize = "1.3.0"


[dev-dependencies]
borsh = "1.5.5"
solana-program-test = "1.18.26"
