[package]
name = "gpl-civic-gateway"
version = "0.1.1"
description = "SPL Governance addin for Civic Pass (www.civic.com)"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_civic_gateway"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build",]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "idl-build",] }
anchor-spl = "0.30.1"
enum_dispatch = "0.3.8"
itertools = "0.12.0"
num = "0.4"
num-derive = "0.4.1"
num-traits = "0.2"
solana-gateway  = { version = "0.6.0", features = ["no-entrypoint"] }
solana-program = "2.2.0"
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.4"
spl-governance-addin-api = "0.1.4"
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "0.10.3"
solana-sdk = "2.2.0"
solana-program-test = "2.2.0"
spl-governance-addin-mock = "0.1.4"
