[package]
name = "gpl-quadratic"
version = "0.1.1"
description = "SPL Governance quadratic voting plugin"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_quadratic"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = "0.30.1"
gpl-shared = { path = "../shared", features = ["no-entrypoint"] }
itertools = "0.14.0"
num = "0.4"
num-derive = "0.4.1"
solana-program = "2.1.13"
spl-governance = { version = "4.0", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.4"
spl-token = { version = "5.0.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
borsh = "1.5.5"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
spl-governance-addin-mock = "0.1.4"