[package]
name = "gpl-token-haver"
version = "0.0.2"
description = "SPL Governance plugin granting governance power based on the nonzero presence of locked tokens"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_haver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "idl-build",] }
anchor-spl = "0.30.1"
solana-program = "2.1.13"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
